--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "serve": "python3 -m http.server 8000"
+    "serve": "python3 -m http.server 8000",
+    "launch": "node launch.js",
+    "launch:dev": "node launch.js dev",
+    "launch:build": "node launch.js build",
+    "launch:install": "node launch.js install"
   },
   "dependencies": {
     "@floating-ui/react": "^0.26.0",
